Add an xs:anyAttribute when there is a name conflict between interface and concrete class (#242)